--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "material-ui": "^0.20.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-mic": "^12.2.2",
     "react-scripts": "2.0.4"
   },
   "scripts": {
