--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,9 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-mic": "^12.2.2",
-    "react-scripts": "2.0.4"
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.0.4",
+    "react-speech-recognition": "^1.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
